syntax = "proto3";

package geocodingpb;

service Geocode {
    rpc Geocode(GeocodeRequest) returns (GeocodeReply) {}
}

message GeocodeRequest {
    string location = 1;
}

message GeocodeReply {
    double latitude = 1;
    double longitude = 2;
    string formattedAddress = 3;
}
